--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static -lpthread")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/VirtualMachine")
 add_executable(OS OS/main.cpp OS/params.h OS/VHD/disk.cpp OS/VHD/disk.h utilities.h)
-add_executable(VM VM/bootloader.cpp VM/bootloader.h VM/main.cpp)
+add_executable(VM VM/bios.h VM/main.cpp)
