--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static -lpthread")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/VirtualMachine")
 #add_executable(OS OS/main.cpp OS/params.h OS/VHD/disk.cpp OS/VHD/disk.h utilities.h)
 add_executable(VM VM/bios.h VM/main.cpp VM/tiny_efs.h utilities.h)
-add_executable(FormatTool FormatTool/format_tool.h FormatTool/main.cpp VM/tiny_efs.h utilities.h)
+add_executable(FormatTool FormatTool/format_tool.h FormatTool/main.cpp VM/tiny_efs.h utilities.h OS/FSC/test.cpp OS/FSC/file_system_controller.h)
