对FSController进行了一部分的修改，请查看

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,5 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/VirtualMachine")
 #add_executable(FormatTool FormatTool/format_tool.h FormatTool/main.cpp VM/tiny_efs.h utilities.h)
 #add_executable(APP OS/APP/main.cpp OS/APP/CLIController.h utilities.h)
 #add_executable(FSC OS/FSC/test.cpp OS/FSC/file_system_controller.h)
-add_executable(VHD_FBC OS/FBC/fbc.h OS/VHD/vhd.h OS/FBC/test.cpp OS/params.h utilities.h)
+#add_executable(VHD_FBC OS/FBC/fbc.h OS/VHD/vhd.h OS/FBC/test.cpp OS/params.h utilities.h)
+add_executable(FSC OS/FSC/fsc.h OS/VFS/test.cpp utilities.h OS/params.h OS/FBC/fbc.h OS/VHD/vhd.h)
